# ForecastWorkspace

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  explanations.py  forecast.py  stocks.py
backend/app/core/: config.py  request_size.py
backend/app/models/: schemas.py
backend/app/services/: arima.py  auth.py  benchmarks.py  data_provider.py  ensemble.py  explanations.py  fourier.py  market_influence.py  ml_forecast.py  rate_limit.py  reliability.py  stocks.py
backend/market_influence_model_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_explanations.py  test_forecast_route.py  test_market_influence.py  test_stocks_history.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/financial-disclaimer/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/app/terms-of-use/: page.tsx
frontend/components/: auth-form.tsx  chart-placeholder.tsx  explanation-panel.tsx  forecast-chart.tsx  forecast-dashboard.tsx  history-viewer.tsx  home-page.tsx  legal-links.tsx  legal-page.tsx  metric-cards.tsx  project-notes.tsx  site-header.tsx  ticker-form.tsx
frontend/lib/: api.ts  auth.ts
