[project]
name = "market-influence-model-api"
version = "0.1.0"
description = "FastAPI backend for the Market Influence Model stock forecasting platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "openai>=1.109.0,<2.0.0",
  "numpy>=2.3.0,<3.0.0",
  "pandas>=2.3.0,<3.0.0",
  "scikit-learn>=1.7.0,<2.0.0",
  "statsmodels>=0.14.5,<1.0.0",
  "xgboost>=3.0.0,<4.0.0",
  "yfinance>=0.2.65,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
